Update 5. quality and nature of sources for construction of the dataset.md

--- a/5. quality and nature of sources for construction of the dataset.md
+++ b/5. quality and nature of sources for construction of the dataset.md
@@ -5,7 +5,7 @@
 
 >> `Accounting, at least accounting as practised on the China coast, being an inexact art, the nature of which changed considerably over the period, the published figures are difficult to interpret and as a time series they contain serious deficiencies.`
 
-> The same observation holds for the Yokohama Specie Bank accounts used for the monograph (‘Midterm’ reports, called *hanki-hōkoku* 半季報告, or, originally, *kōkajō* 考課状 (literally ‘assessment report’), notably for the period January 1893 until July 1908.). Published, relatively openly, on a semestrial basis and distributed among shareholders, as was the case with most exchange banks at the time, they nevertheless provide an insight in accumulated assets and liabilities for each 6-month period. Their importance for our understanding of the activities and management of a late nineteenth century exchange bank can hardly be overestimated. Highly reliable for especially the period around 1900, they provide the necessary shortcut for inter-branch connections that would otherwise be painstaking to reconstruct, for instance on the basis of the ledgers of each individual branch.
+> The same observation holds for the Yokohama Specie Bank accounts used for the monograph (‘Midterm’ reports, called *hanki-hōkoku* 半季報告, or, originally, *kōkajō* 考課状 (literally ‘assessment report’), notably for the period January 1893 until July 1908.). Published, relatively openly, on a semestrial basis and distributed among shareholders, as was the case with most exchange banks at the time, they provide an insight in accumulated assets and liabilities for each 6-month period. Their importance for our understanding of the activities and management of a late nineteenth century exchange bank can hardly be overestimated. Highly reliable for, especially, the period around 1900, they provide the necessary shortcut for inter-branch connections that would otherwise be painstaking to reconstruct, for instance on the basis of the ledgers of each individual branch.
 
 > In their most basic form, the Midterm reports almost all contain the following items:
 >> * a balance sheet listing the bank’s main assets and liabilities (mostly included as fold-out in the back-cover) (*kashakiri-taishōhyō* 貸借対照表)
@@ -24,7 +24,7 @@
 >> * a profit and loss statement (*son’eki kin no koto* 損益金ノ事); and 
 >> * a statement with respect to the allocation of profits (*riekikin bunpaihō no koto*  利益金分配方ノ事)
 
-> For obvious reasons, the balance sheet (1) represents the gist of the bank’s assets and liabilities for each respective semester. It aggregates the balance data that one can find broken down under categories (2)(3)(4)(7)(8)(9)(10)(11)(12)(13)(14)(15). *Note, however, that (5) and (6) are not included here*. The latter are `flow data` (as opposed to `stock data`), meaning that they consist of origin-destination data documenting the flows or migration of assets acquired and liabilities incurred, within the bank’s branch network, and , importantly, *within a clearly delineated time interval* (accumulated assets/liabilities, or 'carried over from former semesters' are excluded).. Because these data comprise both assets and liabilities, they cannot possibly be conveniently allocated under one of these categories. Rather, they help identify risks in interbranch dealings, in our case typically related to difficulties with regard to finding `matching funds`, the relative `exchange position` of a branch within the network and so on. As we will see later, flow data are particularly revealing when assessing the characteristics of specific bank management systems. Concretely, they document, on the basis of the distinction between `bills bought` and `bills sold`, how branches exchange liabilities and assets among each other, and thus make it in principle possible to identify trade patterns between countries and/or regions.  In later paragraphs we will discuss how the latter relate to the former.
+> For obvious reasons, the balance sheet (1) represents the gist of the bank’s assets and liabilities for each respective semester. It aggregates the balance data that one can find broken down under categories (2)(3)(4)(7)(8)(9)(10)(11)(12)(13)(14)(15). *Note, however, that (5) and (6) are not included here*. The latter are `flow data` (as opposed to `stock data`), meaning that they consist of origin-destination data documenting the flows or migration of assets acquired and liabilities incurred, within the bank’s branch network, and, importantly, *within a clearly delineated time interval* (accumulated assets/liabilities, or 'carried over from former semesters' are excluded). Because these data comprise both assets and liabilities, they cannot possibly be conveniently allocated under one of these categories. Rather, they help identify risks in interbranch dealings, in our case typically related to difficulties with regard to finding `matching funds`, the relative `exchange position` of a branch within the network and so on. As we will see later, flow data are particularly revealing when assessing the characteristics of specific bank management systems. Concretely, they document, on the basis of the distinction between `bills bought` and `bills sold`, how branches exchange liabilities and assets among each other, and thus make it, in principle, possible to identify trade patterns between countries and/or regions.
 
 ### Interpretative hurdles; how reliable are the published accounts?
 
@@ -36,4 +36,4 @@
 
 > Behind the published accounts, there also was a process of **auditing**. After all, the semi-annual accounts were not a statement of the position of the Bank on the date stated. The tyranny of distance still being real, even after adoption of the telegraph, bank branches would close their books on different dates in order for their information to reach the Head Office in time. Clearly, the auditors reports (*kansayaku yōroku* 監査役要録) had quite some things to be concerned with: the rate at which accounts were 'taken over', the time lag involved in integrating them with Head Office Accounts,the local (i.e. branch-specific) assessment of non-performing loans, the valuation of public securities held etc.
 
-> This is not to say there may not have been a mismatch between the bank's official accounts and public perception. Judging from contemporary journalistic sources (the *Economist*, the *Investors' Monthly Manual*, etc.), shareholders/investors/observers made their own estimates of the so-called 'inner reserves'and the valuation of the securities held against the reserve fund; I furthermore suppose much depended on how these people evaluated the Bank's ongoing policy with respect to handling shifts and exchange rates, as also the discussions of the `even keel` in the *North China Herald* proves (see the monograph). However, this also reinforces the assumption that the mismatch should not have been too wide in order to remain credible after all. *Confidence* was (and remains) one of a bank's most important assets, and the latter was arguably derived from the Bank's published figures. As in [Akerlof's famous thought experiment](https://doi.org/10.2307/1879431), banks may have been incentivized to counteract information asymmetry by adopting (self-)certifying measures as reputation and prestige through transparency.
+> This is not to say there may not have been a mismatch between the bank's official accounts and public perception. Judging from contemporary journalistic sources (the *Economist*, the *Investors' Monthly Manual*, etc.), shareholders/investors/observers made their own estimates of the so-called 'inner reserves'and the valuation of the securities held against the reserve fund. I suppose much depended on how these people evaluated the Bank's ongoing policy with respect to handling shifts in exchange rates, as also the discussions of the `even keel` in the *North China Herald* prove (see the monograph). However, this also reinforces the assumption that the mismatch should not have been too wide in order to remain credible after all. *Confidence* was (and remains) one of a bank's most important assets, and the latter was arguably derived from the Bank's published figures. As in [Akerlof's famous thought experiment](https://doi.org/10.2307/1879431), banks may have been incentivized to counteract information asymmetry by adopting (self-)certifying measures as reputation and prestige through transparency.
