--- a/5. quality and nature of sources for construction of the dataset.md
+++ b/5. quality and nature of sources for construction of the dataset.md
@@ -10,19 +10,19 @@
 > In their most basic form, the Midterm reports almost all contain the following items:
 >> * a balance sheet listing the bank’s main assets and liabilities (mostly included as fold-out in the back-cover) (*kashakiri-taishōhyō* 貸借対照表)
 >> * a statement on the bank’s shareholders fund; its reserve fund(s) (Jpn. *kabukin shotsumitatekin oyobi junbikin no koto* 株金諸積立金及ビ準備金ノ事)
->> * a statement on deposits (Jpn. *yokin no koto* 預金ノ事)
->> * a statement of loans and bills discounted (Jpn. *kashikin oyobi tegata waribiki no koto* 貸金及ビ手形割引ノ事)
->> * a statement on its foreign exchange holdings and movements (Jpn. *kaigai kawase no koto* 海外為替ノ事)
->> * a statement on inland bills (*naikoku kawase no koto* 内国為替ノ事)
->> * a statement on rediscounting activity (*sai-waribiki tegata no koto* 再割引手形ノ事)
->> * a statement on loans payable (*kari-irekin no koto* 借入金ノ事)
->> * a statement on holdings of silver and gold money; cash on deposit (*kingin zaidaka oyobi yotakukin no koto* 金銀在高及ビ預託金ノ事) 
->> * a statement on holdings of public loans and other securities (*kōsai shōsho no koto* 公債證書ノ事)
->> * a statement on property (*shoyūbutsu no koto* 所有物ノ事)
->> * a statement on holdings of gold and silver bullion and foreign currencies (*jigane gin oyobi gaikoku ka no koto* 地金銀及ビ外国貨幣ノ事)
->> * a statement of income derived from the selling and buying of stocks (*kabushiki baibai jōju no koto* 株式売買譲受ノ事)
->> * a profit and loss statement (*son’eki kin no koto* 損益金ノ事); and 
->> * a statement with respect to the allocation of profits (*riekikin bunpaihō no koto*  利益金分配方ノ事)
+>> * 1. a statement on deposits (Jpn. *yokin no koto* 預金ノ事)
+>> * 2. a statement of loans and bills discounted (Jpn. *kashikin oyobi tegata waribiki no koto* 貸金及ビ手形割引ノ事)
+>> * 3. a statement on its foreign exchange holdings and movements (Jpn. *kaigai kawase no koto* 海外為替ノ事)
+>> * 4. a statement on inland bills (*naikoku kawase no koto* 内国為替ノ事)
+>> * 5. a statement on rediscounting activity (*sai-waribiki tegata no koto* 再割引手形ノ事)
+>> * 6. a statement on loans payable (*kari-irekin no koto* 借入金ノ事)
+>> * 7. a statement on holdings of silver and gold money; cash on deposit (*kingin zaidaka oyobi yotakukin no koto* 金銀在高及ビ預託金ノ事) 
+>> * 8. a statement on holdings of public loans and other securities (*kōsai shōsho no koto* 公債證書ノ事)
+>> * 9. a statement on property (*shoyūbutsu no koto* 所有物ノ事)
+>> * 10. a statement on holdings of gold and silver bullion and foreign currencies (*jigane gin oyobi gaikoku ka no koto* 地金銀及ビ外国貨幣ノ事)
+>> * 11. a statement of income derived from the selling and buying of stocks (*kabushiki baibai jōju no koto* 株式売買譲受ノ事)
+>> * 12. a profit and loss statement (*son’eki kin no koto* 損益金ノ事); and 
+>> * 13. a statement with respect to the allocation of profits (*riekikin bunpaihō no koto*  利益金分配方ノ事)
 
 > For obvious reasons, the balance sheet (1) represents the gist of the bank’s assets and liabilities for each respective semester. It aggregates the balance data that one can find broken down under categories (2)(3)(4)(7)(8)(9)(10)(11)(12)(13)(14)(15). *Note, however, that (5) and (6) are not included here*. The latter are `flow data` (as opposed to `stock data`), meaning that they consist of origin-destination data documenting the flows or migration of assets acquired and liabilities incurred, within the bank’s branch network, and, importantly, *within a clearly delineated time interval* (accumulated assets/liabilities, or 'carried over from former semesters' are excluded). Because these data comprise both assets and liabilities, they cannot possibly be conveniently allocated under one of these categories. Rather, they help identify risks in interbranch dealings, in our case typically related to difficulties with regard to finding `matching funds`, the relative `exchange position` of a branch within the network and so on. As we will see later, flow data are particularly revealing when assessing the characteristics of specific bank management systems. Concretely, they document, on the basis of the distinction between `bills bought` and `bills sold`, how branches exchange liabilities and assets among each other, and thus make it, in principle, possible to identify trade patterns between countries and/or regions.
 
