Update 5. quality and nature of sources for construction of the dataset.md

--- a/5. quality and nature of sources for construction of the dataset.md
+++ b/5. quality and nature of sources for construction of the dataset.md
@@ -12,8 +12,8 @@
 >> * 2. a statement on the bank’s shareholders fund; its reserve fund(s) (Jpn. *kabukin shotsumitatekin oyobi junbikin no koto* 株金諸積立金及ビ準備金ノ事)
 >> * 3. a statement on deposits (Jpn. *yokin no koto* 預金ノ事)
 >> * 4. a statement of loans and bills discounted (Jpn. *kashikin oyobi tegata waribiki no koto* 貸金及ビ手形割引ノ事)
->> * 5. a statement on its foreign exchange holdings and movements (Jpn. *kaigai kawase no koto* 海外為替ノ事)
->> * 6. a statement on inland bills (*naikoku kawase no koto* 内国為替ノ事)
+>> * **5. a statement on its foreign exchange holdings and movements (Jpn. *kaigai kawase no koto* 海外為替ノ事)**
+>> * **6. a statement on inland bills (*naikoku kawase no koto* 内国為替ノ事)**
 >> * 7. a statement on rediscounting activity (*sai-waribiki tegata no koto* 再割引手形ノ事)
 >> * 8. a statement on loans payable (*kari-irekin no koto* 借入金ノ事)
 >> * 9. a statement on holdings of silver and gold money; cash on deposit (*kingin zaidaka oyobi yotakukin no koto* 金銀在高及ビ預託金ノ事) 
