Update 2. data inclusion and exclusion.md

--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -10,7 +10,7 @@
 
 ![YSB on an even keel](/YSB_on_an_even_keel_1893-1908_definitive.png)
 
-Source: own dataset and visualization; see: https://plot.ly/~michaelschiltz/50/ysb-on-an-even-keel-1893-1908/
+Source: own dataset and visualization; see: my [plotly-pages](https://plot.ly/~michaelschiltz/50/ysb-on-an-even-keel-1893-1908/)
 
 ### Balance sheet data: stock data
 
