--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -2,7 +2,7 @@
 ### Flow data: Flow-of-fund (資金循環) analysis of an exchange bank branch network
 
 > * A reconstruction of YSB’s flow-of-funds has been attempted by many others, with varying degrees of success. As indicated in the chapter "Making of the Database", Taira’s groundbreaking study is the first to bring a network theoretical understanding to YSB, but it unfortunately eliminated the data related to the interest bills (not included in the flow data for accounting reasons). As a matter of fact, he surmised that interest bills were listed in both `statement of loans and bills discounted` and the `statement on foreign exchange holdings and movements`. Hence, he omitted them from his analysis as it would otherwise amount to double-counting the data. 
->> * *Sources*: 
+>> *Sources*: 
 >>  * 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-上-.」 『金融経済』, no. 208 (October): p. 41–81. http://ci.nii.ac.jp/naid/40000792001; 
 >>  * 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-下-.」 『金融経済』, no. 209 (December): p. 1–27. http://ci.nii.ac.jp/naid/40000792007.
   
