--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -111,7 +111,8 @@ A particular point of attention must be reserved for the so-called `interest bil
 
 >> Sources:
 >> * Ishii Kanji 石井寛治. 1999. *Kindai nihon kin’yū-shi josetsu* 『近代日本金融史序説』. 東京大学出版会. P. 250-251; 
->> * Ishii Kanji. 1994. “Japanese Foreign Trade and the Yokohama Specie Bank, 1880-1913”, in Olive Checkland, Shizuya Nishimura, and Norio Tamaki (eds.), *Pacific Banking, 1859-1959: East Meets West*. New York: St. Martin’s Press. Pp. 22-23. >> >> * Taira Tomoyuki 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-上-.」 『金融経済』, no. 208 (October): p41–81. http://ci.nii.ac.jp/naid/40000792001; 
+>> * Ishii Kanji. 1994. “Japanese Foreign Trade and the Yokohama Specie Bank, 1880-1913”, in Olive Checkland, Shizuya Nishimura, and Norio Tamaki (eds.), *Pacific Banking, 1859-1959: East Meets West*. New York: St. Martin’s Press. Pp. 22-23. 
+>> * Taira Tomoyuki 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-上-.」 『金融経済』, no. 208 (October): p41–81. http://ci.nii.ac.jp/naid/40000792001; 
 >> * Taira Tomoyuki 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-下-.」 『金融経済』, no. 209 (December): p1–27. http://ci.nii.ac.jp/naid/40000792007. 
 >> * Bak Jun Geon 朴埈健. 1992. 「産業資本成立期における横浜正金銀行の資金循環構造–利付為替手形の処理問題を中心として.」 『経済論究』, March, p. 147–162.
 
