Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -1,5 +1,5 @@
 ## A. Flow-of-funds Analysis
-\begin{bmatrix}a & b \\c & d \end{bmatrix} 
+\begin{bmatrix}a & b \c & d \end{bmatrix} 
 
 ### Data structure
 
