--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -1,5 +1,7 @@
 ## A. Flow-of-funds Analysis
 
+$\beta  \left(x-1\right)\left(x+3\right)$
+
 ### Data structure
 
 1. how to calculate the flow of funds amount from (generic) branch X to (generic) branch Y:
