Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -93,7 +93,7 @@ Source: [own data and analysis](https://plot.ly/~michaelschiltz/13/ysb-branches-
 
 ### Conversions into Japanese yen
 
-> * Exchange rates were taken from the  "Historical statistics - Exchange rates" page of the Bank of Japan, http://www.imes.boj.or.jp/hstat/data/ferdd/index.html; this page contains both a data source (in .CSV), and an [explanatory note](http://www.imes.boj.or.jp/hstat/data/ferdd/note_ferdd.html); see [here for English](http://www.imes.boj.or.jp/english/hstat/data/ferdd/note_ferdd.html)
+> * Exchange rates were taken from the  ["Historical statistics - Exchange rates" page of the Bank of Japan](http://www.imes.boj.or.jp/hstat/data/ferdd/index.html); this page contains both a data source (in .CSV), and an [explanatory note](http://www.imes.boj.or.jp/hstat/data/ferdd/note_ferdd.html); see [here for English](http://www.imes.boj.or.jp/english/hstat/data/ferdd/note_ferdd.html)
 > * I have used the monthly average value as base for calculations (unfortunately, end-of-month rates are not included in the BOJ database)
 
 ## B. Interest Bills
